# taskify

./: .dockerignore  .gitignore  .taskifyignore  Cargo.toml  README.md  docker-compose.build.yml  docker-compose.yml  package.json
.build/os/linux/: Dockerfile
.build/os/windows/: Dockerfile
.github/workflows/: docs.yml  release.yml
api/: Cargo.toml
api/src/server/: mod.rs
api/src/server/controller/: board.rs  mod.rs
api/src/server/controller/types/: message.rs  mod.rs  query.rs  task.rs
api/src/server/docs/: mod.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/cli/: mod.rs  scan.rs
cli/src/cli/controllers/: board.rs  mod.rs  scan.rs
cli/src/cli/controllers/common/: file.rs  mod.rs  table.rs  task.rs
cli/src/cli/ui/: mod.rs
cli/src/cli/ui/widgets/card/: mod.rs
desktop/: Cargo.toml  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/src/: main.rs  main.tsx  styles.scss
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src/App/: App.tsx
desktop/src/Widget/: Widget.tsx
desktop/src/types/: board.ts  project.ts  (+1 more)
docs/: Dockerfile  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/api/: index.md
examples/: main.ts
taskify/: Cargo.toml
taskify/src/: lib.rs
taskify/src/board/: mod.rs
taskify/src/comment/: mod.rs
taskify/src/comments/: comment.rs  mod.rs
taskify/src/events/: mod.rs
taskify/src/info/: mod.rs
taskify/src/plugins/: mod.rs
taskify/src/plugins/extensions/file/: file.js  mod.rs
taskify/src/plugins/extensions/http/: mod.rs
taskify/src/plugins/function/: mod.rs
taskify/src/plugins/runtime/: mod.rs
taskify/src/plugins/tests/: mod.rs
taskify/src/plugins/tests/mock/: mod.rs
taskify/src/plugins/tests/mock/capitalize/: index.js
taskify/src/plugins/tests/mock/extra/: index.js
taskify/src/plugins/tests/mock/file/: index.js
taskify/src/plugins/tests/mock/filter/: index.js
taskify/src/server/: mod.rs
taskify/src/server/controller/: board.rs  mod.rs
taskify/src/syntax/: mod.rs
taskify/src/syntax/c_based/: matcher.rs  mod.rs  regex.rs  utils.rs
taskify/src/task/: mod.rs  state.rs  task.rs
taskify/src/task/common/: mod.rs
taskify/src/task/ignore/: mod.rs
taskify/src/task/path/: mod.rs
taskify/src/task/regex/: mod.rs
taskify/src/task/state/: mod.rs
taskify/src/task/state/integer/: mod.rs
taskify/src/task/state/string/: mod.rs
taskify/src/task/transform/: mod.rs
taskify/src/utils/: mod.rs
taskify/src/utils/file/: mod.rs
taskify/src/utils/git/: mod.rs
taskify/src/utils/http/file_info/: mod.rs
taskify/src/utils/markdown/: mod.rs
taskify/src/utils/regex/: mod.rs
(+104 files in other folders)
