[workspace]
members = [ "api", "cli", "desktop","taskify"]
resolver = "2"

[workspace.dependencies]
regex = "1.11.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
notify = { version = "7.0.0", features = ["serde"] }
tokio = "1.41.1"
base64 = "0.22.1"
utoipa = {version = "5", features = ["actix_extras"] }

[workspace.dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]