[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taskify = { path = "../taskify" }
regex = { workspace = true }
notify-debouncer-mini = { workspace = true }
notify = { workspace = true, features = ["serde"] }