[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taskify = { path = "../taskify" }
api = { path = "../api" }
regex = { workspace = true }
notify = { workspace = true, features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
comfy-table = "7.1.1"
ratatui = "0.29.0"
crossterm = "0.28.1"

[[bin]]
name = "taskify"
path = "src/main.rs"