[package]
name = "taskify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { workspace = true }
notify = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
utoipa = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
git2 = "0.19.0"
chrono = "0.4.38"
deno_core = "0.325.0"
